# TappsCodingAgents

./: .cursorignore  .cursorrules  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BMAD_INSPIRED_IMPROVEMENTS.md  BMAD_INSPIRED_IMPROVEMENTS_RANKED.md  CHANGELOG.md  CLAUDE.local.example.md  CLAUDE.md  CLI_INSTALLATION_FIX.md  CODE_REVIEW_REPORT.md  COLLADALOADER_FIX_ANALYSIS.md  COLLADALOADER_FIX_SUMMARY.md  CONTEXT7_API_KEY_VERIFICATION_RESULTS.md  CONTEXT7_INTEGRATION_ARCHITECTURE.md  CONTEXT7_REAL_INTEGRATION_TESTS_SUMMARY.md  CONTEXT7_TEST_IMPROVEMENTS.md  CONTRIBUTING.md  COVERAGE_AND_COMPLEXITY_VALIDATION.md  CURSOR_INTEGRATION_ANALYSIS.md  CURSOR_INTEGRATION_REVIEW.md  CURSOR_LLM_COMMUNICATION_PLAN.md  CURSOR_LLM_QUICK_START.md  CURSOR_RULES_FIXES_SUMMARY.md  CURSOR_RULES_IMPLEMENTATION.md  CURSOR_RULES_SKILLS_UPDATE.md  DEMO_PLAN_SUMMARY.md  DEPLOYMENT_VERIFICATION.md  DOCKER_DB_CLEANUP_VALIDATION_REPORT.md  DOCS_REVIEW_ANALYSIS.md  DOCUMENTATION_UPDATES_SUMMARY.md  E2E_TEST_EXECUTION_REPORT.md  E2E_TEST_NEXT_STEPS.md  E2E_TEST_REVIEW.md  EVALUATION_REPORT.md  FINAL_VALIDATION_REPORT.md  FIX_EXECUTION_SUMMARY.md  (+155 more)
.bmad-core/: BMAD_MASTERY_SUMMARY.md  CODE_REVIEW_INTEGRATION_SUMMARY.md  PROGRESSIVE_REVIEW_VALIDATION.md  core-config.yaml  flattener.md  install-manifest.yaml  user-guide.md  working-in-the-brownfield.md
.cursor/: background-agents.backup.20251229-121526.yaml  background-agents.yaml  mcp.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.tapps-agents/: domains.md  enhancement-config.yaml  experts.yaml  nuc-config.yaml  project-profile.yaml  review-changes.txt  tech-stack.yaml  tmp-review-core.txt  tmp-review.md  unified-cache-config.yaml  workflow-presets.yaml
billstest/: EXECUTION_SUMMARY.md  INSTALLATION_STATUS.md  ISSUES_LIST.md  PHASE1_RESULTS.md  PHASE1_SUMMARY.md  PHASE2_RESULTS.md  PHASE2_SUMMARY.md  README.md  REVIEW_AND_EXECUTION_PLAN.md  REVIEW_SUMMARY.md  SETUP_COMPLETE.md  TEST_SETUP_GUIDE.md  check_services.py  pytest.ini  verify_setup.ps1
demo/: DEMO_QUICK_START.md  README.md  demo_prompt_enhancement.py  run_demo.py
demo_output/: demo-dashboard.html
docs/: ADAPTIVE_LEARNING_IMPLEMENTATION.md  AGENTS_MD_GUIDE.md  AGENT_LEARNING_GUIDE.md  AGENT_ROLE_FILE_FORMAT.md  AI_COMMENT_GUIDELINES.md  AI_DOCUMENTATION_STANDARDS_IMPLEMENTATION_COMPLETE.md  AI_DOCUMENTATION_STANDARDS_IMPLEMENTATION_PLAN.md  AI_DOCUMENTATION_STANDARDS_IMPLEMENTATION_PROGRESS.md  ANALYSIS_PROMPT_ENHANCEMENT_COMPARISON.md  API.md  ARCHITECTURE.md  AUTO_ENHANCEMENT_GUIDE.md  AUTO_EXECUTION_FIX_SUMMARY.md  BACKGROUND_AGENTS_AUTO_EXECUTION_GUIDE.md  BACKGROUND_AGENTS_DOCTOR_FIX.md  BACKGROUND_AGENTS_EVALUATION.md  BACKGROUND_AGENTS_EVALUATION_SDLC_SUMMARY.md  BACKGROUND_AGENTS_GUIDE.md  BACKGROUND_AGENTS_MIGRATION_GUIDE.md  BACKGROUND_AGENTS_MONITORING.md  BACKGROUND_AGENTS_TROUBLESHOOTING.md  BACKGROUND_AGENTS_USE_CASE_GUIDE.md  BACKGROUND_PROCESS_ENHANCEMENTS.md  BEADS_GITHUB_BEST_PRACTICES.md  BEADS_INTEGRATION.md  BEADS_ISSUES_AND_ENHANCEMENTS.md  BETA_TEST_RESULTS.md  BROWNFIELD_ANALYSIS_DESIGN.md  BUG_EVALUATION_ISSUE_5_CONTEXT7_CACHE_PREPOPULATION.md  BUG_FIX_AGENT_2025_RECOMMENDATIONS.md  BUG_FIX_ISSUE_5_SUMMARY.md  BUILTIN_EXPERTS_GUIDE.md  CHECKPOINT_INTEGRATION_GUIDE.md  CHECKPOINT_RESUME_GUIDE.md  CHECKPOINT_SYSTEM_GUIDE.md  CIRCULAR_REFERENCE_FIX_SUMMARY.md  CLAUDE_CODE_CLI_GUIDE.md  CLAUDE_CURSOR_EQUAL_SUPPORT.md  CLAUDE_DESKTOP_COMMANDS.md  CLEANUP_SUMMARY.md  (+314 more)
examples/: long_duration_example.py  unified_cache_example.py  visual_feedback_example.py
implementation/: ARCHITECTURE_2025_ANALYSIS.md  ARCHITECTURE_REVIEW_2025.md  BACKWARDS_COMPATIBILITY_REMOVAL_COMPLETE.md  BEADS_INTEGRATION_TESTING_PLAN.md  BMAD_IMPROVEMENTS_EPICS_SUMMARY.md  BMAD_IMPROVEMENTS_STORIES_SUMMARY.md  BMAD_PATTERNS_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_REVIEW_2025.md  CONFIG_ONLY_EXPERTS_COMPLETE.md  CONFIG_ONLY_EXPERTS_PLAN.md  CONTEXT7_RECOMMENDATIONS.md  CURSOR_RULES_2025_VERIFICATION.md  DOCUMENTATION_UPDATE_PHASE7.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY_2025.md  ENHANCEMENT_PRIORITY_LIST.md  ENHANCER_AGENT_IMPLEMENTATION.md  ENHANCER_SETUP_COMPLETE.md  EPIC_01_Update_Safe_Agent_Customization_Layer.md  EPIC_02_Tech_Stack_Specific_Expert_Prioritization.md  EPIC_03_Dynamic_Tech_Stack_Templates.md  EPIC_04_Agent_Role_Markdown_Files.md  EPIC_05_Workflow_Recommendation_Engine_Enhancement.md  EPIC_06_User_Role_Templates.md  EPIC_07-16_CURSOR_INTEGRATION_SUMMARY.md  EPIC_07_Background_Agent_Auto_Execution.md  EPIC_07_STORY_ADDITIONS_SUMMARY.md  EPIC_08_Real_Time_Progress_Updates.md  EPIC_09_Natural_Language_Workflow_Triggers.md  EPIC_10_Workflow_Auto_Progression.md  EPIC_11_Visual_Feedback_and_Status.md  EPIC_12_State_Persistence_and_Resume.md  EPIC_12_State_Persistence_and_Resume_REVIEW.md  EPIC_13_Context_Aware_Suggestions.md  EPIC_14_Error_Recovery_and_Suggestions.md  EPIC_15_Analytics_Dashboard_Integration.md  EPIC_16_Custom_Skills_Support.md  EPIC_17-19_BMAD_REVIEW.md  EPIC_17-19_Quality_Improvement_Summary.md  (+103 more)
requirements/: PROJECT_REQUIREMENTS.md  README.md  TECH_STACK.md  agent_api.md  model_profiles.yaml
requirments/: agents.md  model_profiles.yaml
schemas/: README.md
scripts/: README.md  analyze_and_fix.py  analyze_project.py  append_improver_methods.py  apply_p4_ethics.py  check_dependency_versions.py  check_doc_sync.py  check_documented_arguments.py  check_mcp_tools.py  check_prerequisites.py  coverage_tracker.py  create_github_release.ps1  debug_mcp_error.py  diagnose_ci_issues.py  ensure_test_env.ps1  execute_improvements.py  fix_context7_mcp.py  fix_mcp_keys.py  fix_mcp_npx_windows.py  generate_artifact_schemas.py  generate_lock_files.py  inject_mcp_keys.py  load_mcp_keys.ps1  load_mcp_keys.py  monitor_background_agents.py  monitor_status.py  monitor_workflow_progress.py  patch_docker_container.py  prepopulate_context7_cache.py  quality_marathon.py  replace_unicode_quotes.py  review_experts_and_rag.py  run_amazon_workflow.py  run_doc_tests.py  run_e2e_tests.py  (+23 more)
(+8208 files in other folders)
